--- a/page1.html
+++ b/page1.html
@@ -41,11 +41,11 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://habblight.mobirisesite.com/">
-                        <img src="assets/images/iced-0x0-habbid-16.gif" alt="Mobirise" title="" style="height: 5rem;">
+                    <a href="http://hobba.com.br" target="_blank">
+                        <img src="assets/images/iced-0x0-habbid-1.gif" alt="Mobirise" title="" style="height: 5rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="https://mobirise.com">Hobba Site</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="https://hobba.com.br">Hobba Site</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="" class="cid-qYMqdmYudP" id="footer6-o">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section once="" class="cid-qYMqdmYudP" id="footer6-o">
 
     
 
@@ -90,7 +90,7 @@
     <div class="form-container">
         <div class="media-container-column" data-form-type="formoid">
             <div data-form-alert="" hidden="" class="align-center">Obigado, por sua denuncia !!</div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uUaoC6C2gBI9uvyyJ+JKlYWZ6hNunE++aT7PdogK56eQK+TYHeK7q3r0KeDSkuU8nf8BFQQtWeixmI2VUvLaWf2kEl6kilLUFk+iDTsQJMjELE9p2NkrCH1n2W8oibrs">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Pdc3zRTIIqPmcj8NGqLq8wqXtOuYqfz2kyDzJ/W8OU+RbsOYx+ZwImHgvVVw78kz36kZg0rbSw2+msPNL1SudSVb1fSM70TPX3g5nAnFz5nuE3JOHaDDmojMfPNZkbFL">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Nick" required="" id="name-header15-r">
