--- a/bugshbl.html
+++ b/bugshbl.html
@@ -41,11 +41,11 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://habblight.mobirisesite.com/">
-                        <img src="assets/images/iced-0x0-habbid-16.gif" alt="Mobirise" title="" style="height: 5rem;">
+                    <a href="http://hobba.com.br" target="_blank">
+                        <img src="assets/images/iced-0x0-habbid-1.gif" alt="Mobirise" title="" style="height: 5rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="https://mobirise.com">Hobba Site</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="https://hobba.com.br">Hobba Site</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="" class="cid-qYMqdmYudP" id="footer6-2p">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section once="" class="cid-qYMqdmYudP" id="footer6-2p">
 
     
 
@@ -92,7 +92,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Obrigado por nos alertar.</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gk4DWWGAvrQay6aJpWPbEH62KWi7pv3X+TFM7JpZ+eKSHBXEhxpjqHQpEPP2IZgg2G4Ur6f/mjLO5EKpXY/Zrder1cDuos7dvUlnkttaT35hKwTMxOasAAjEcfxj3l3U">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Bd4na5lmr9yl3T5W0TkhfB78OSe4lGBc8p01fstN0wBrR9+Vgga3rMPPUJxLgaCaW8gDOHGiwgc+UT0icdSadNU9HywuRgMgatkSrRTgQrfIIh02r7f15MyLwRe/Zyha">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
