--- a/page.html
+++ b/page.html
@@ -41,11 +41,11 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://habblight.mobirisesite.com/">
-                        <img src="assets/images/iced-0x0-habbid-16.gif" alt="Mobirise" title="" style="height: 5rem;">
+                    <a href="http://hobba.com.br" target="_blank">
+                        <img src="assets/images/iced-0x0-habbid-1.gif" alt="Mobirise" title="" style="height: 5rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="https://mobirise.com">Hobba Site</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="https://hobba.com.br">Hobba Site</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section once="" class="cid-qYMqdmYudP" id="footer6-1m">
+<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section once="" class="cid-qYMqdmYudP" id="footer6-1m">
 
     
 
